# chess

./: README.md  main.py  pyproject.toml
board/: __init__.py  check.py  parse.py  test_check.py  test_move.py  test_parse_fen.py
pieces/: __init__.py  bishop.py  king.py  knight.py  pawn.py  queen.py  rook.py  test_bishop.py  test_king.py  test_knight.py  test_pawn.py  test_queen.py  test_rook.py
src/chess/: __init__.py  __main__.py
src/chess/board/: __init__.py  check.py  parse.py  test_check.py  test_move.py  test_parse_fen.py
src/chess/pieces/: __init__.py  bishop.py  king.py  knight.py  pawn.py  queen.py  rook.py  test_bishop.py  test_king.py  test_knight.py  test_pawn.py  test_queen.py  test_rook.py
